force-app/main/default/objects/CM_Bug__c/CM_Bug__c.object-meta.xml
<CustomObject>
    <label>Bug</label>
    <nameField>
        <displayFormat>BUG-{000}</displayFormat>
        <label>Bug Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bugs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>