force-app/main/default/objects/CM_Bug__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>New bugs get assigned to the Developer.
When the bug is fixed this should be the QA Lead.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bugs</relationshipName>
    <type>Lookup</type>
</CustomField>