force-app/main/default/objects/CM_Bug__c/fields/Backlog_Item__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Item__c</fullName>
    <label>Backlog Item</label>
    <referenceTo>CM_Backlog_Item__c</referenceTo>
    <relationshipLabel>Bugs</relationshipLabel>
    <relationshipName>Bugs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>