force-app/main/default/objects/CM_Bug__c/fields/BackLog_Number__c.field-meta.xml
<CustomField>
    <fullName>BackLog_Number__c</fullName>
    <formula>Backlog_Item__r.BackLog_ID__c</formula>
    <label>BackLog Number</label>
    <type>Text</type>
</CustomField>