force-app/main/default/objects/CM_Bug__c/fields/Business_Priority__c.field-meta.xml
<CustomField>
    <fullName>Business_Priority__c</fullName>
    <label>Business Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Critical</fullName>
            </value>
            <value>
                <fullName>2-High</fullName>
            </value>
            <value>
                <fullName>3-Medium</fullName>
            </value>
            <value>
                <fullName>4-Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>