force-app/main/default/objects/CM_Bug__c/fields/Detected_By__c.field-meta.xml
<CustomField>
    <fullName>Detected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bugs1</relationshipName>
    <type>Lookup</type>
</CustomField>