force-app/main/default/objects/CM_Bug__c/fields/Developer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Developer_Comments__c</fullName>
    <label>Developer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>