force-app/main/default/objects/CM_Bug__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PQA</fullName>
                <default>true</default>
                <label>PQA</label>
            </value>
            <value>
                <fullName>PUAT</fullName>
            </value>
            <value>
                <fullName>MQA</fullName>
            </value>
            <value>
                <fullName>MUAT</fullName>
            </value>
            <value>
                <fullName>MUAT2</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>