force-app/main/default/objects/CM_Bug__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature</label>
    <referenceTo>CM_Feature__c</referenceTo>
    <relationshipLabel>Bugs</relationshipLabel>
    <relationshipName>Bugs</relationshipName>
    <type>Lookup</type>
</CustomField>