force-app/main/default/objects/CM_Bug__c/fields/Fix_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Fix_Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The sprint in which the bug will be fixed.</inlineHelpText>
    <label>Fix Sprint</label>
    <referenceTo>CM_Sprint__c</referenceTo>
    <relationshipLabel>Bugs</relationshipLabel>
    <relationshipName>Bugs</relationshipName>
    <type>Lookup</type>
</CustomField>