force-app/main/default/objects/CM_Bug__c/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <label>Functional Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CSRR</fullName>
            </value>
            <value>
                <fullName>Customer Search</fullName>
            </value>
            <value>
                <fullName>DMV Services</fullName>
            </value>
            <value>
                <fullName>Internet Leads</fullName>
            </value>
            <value>
                <fullName>Lead and Opportunity Management</fullName>
            </value>
            <value>
                <fullName>Lead Internal Referral</fullName>
            </value>
            <value>
                <fullName>Member Experience</fullName>
            </value>
            <value>
                <fullName>Membership Subscription Platform</fullName>
            </value>
            <value>
                <fullName>Smart Navigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>