force-app/main/default/objects/CM_Bug__c/fields/Group_Tag__c.field-meta.xml
<CustomField>
    <fullName>Group_Tag__c</fullName>
    <inlineHelpText>Tag for logical grouping</inlineHelpText>
    <label>Group Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>