force-app/main/default/objects/CM_Bug__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1) High</fullName>
            </value>
            <value>
                <fullName>2) Medium</fullName>
            </value>
            <value>
                <fullName>3) Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>