force-app/main/default/objects/CM_Bug__c/fields/Priority_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Priority_Ranking__c</fullName>
    <inlineHelpText>Numeric value for the priority of the bug.  Higher numbers are higher priority.</inlineHelpText>
    <label>Priority Ranking</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>