force-app/main/default/objects/CM_Bug__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACA Partner Clubs: PRO2213</fullName>
            </value>
            <value>
                <fullName>Agent Master</fullName>
            </value>
            <value>
                <fullName>AWP/Contact Strategy</fullName>
            </value>
            <value>
                <fullName>Business Operations: Cost Center 4</fullName>
            </value>
            <value>
                <fullName>Campaign/Lead Tracker Project: PRO2755</fullName>
            </value>
            <value>
                <fullName>CMNG: 67109B0</fullName>
            </value>
            <value>
                <fullName>Defects/KTLO; 2326-533</fullName>
            </value>
            <value>
                <fullName>DMV Project: PRO2746</fullName>
            </value>
            <value>
                <fullName>Market 1</fullName>
            </value>
            <value>
                <fullName>Member Experience: 67209B0</fullName>
            </value>
            <value>
                <fullName>Membership Project: 65608I1</fullName>
            </value>
            <value>
                <fullName>MRM Sales (Life)</fullName>
            </value>
            <value>
                <fullName>MRM Sales (NV/UT): 67110C0</fullName>
            </value>
            <value>
                <fullName>MRM Service (MP2 Enablement): 67109B0</fullName>
            </value>
            <value>
                <fullName>Online Quote Project: 65611GO</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Sales Action Planning (SAP)</fullName>
            </value>
            <value>
                <fullName>Specialty Products: 67409B1</fullName>
            </value>
            <value>
                <fullName>Sprint Management</fullName>
            </value>
            <value>
                <fullName>Technical Operations: 2326-533</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>