force-app/main/default/objects/CM_Bug__c/fields/QC_URL__c.field-meta.xml
<CustomField>
    <fullName>QC_URL__c</fullName>
    <label>QC URL</label>
    <type>Url</type>
</CustomField>