force-app/main/default/objects/CM_Bug__c/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <label>Reason for Rejection</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Changed Requirement</fullName>
            </value>
            <value>
                <fullName>Environment Issue</fullName>
            </value>
            <value>
                <fullName>Functionality Out of Scope</fullName>
            </value>
            <value>
                <fullName>Incorrect Data</fullName>
            </value>
            <value>
                <fullName>Misunderstood Requirement</fullName>
            </value>
            <value>
                <fullName>Not Reproducible</fullName>
            </value>
            <value>
                <fullName>Removed Requirement</fullName>
            </value>
            <value>
                <fullName>Test Process Error</fullName>
            </value>
            <value>
                <fullName>Works As Designed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>