force-app/main/default/objects/CM_Bug__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requirement</label>
    <referenceTo>CM_Requirement__c</referenceTo>
    <relationshipLabel>Bugs</relationshipLabel>
    <relationshipName>Bugs</relationshipName>
    <type>Lookup</type>
</CustomField>