force-app/main/default/objects/CM_Bug__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code Deployment</fullName>
            </value>
            <value>
                <fullName>Coding</fullName>
            </value>
            <value>
                <fullName>Data Setup</fullName>
            </value>
            <value>
                <fullName>Existing Production Issue</fullName>
            </value>
            <value>
                <fullName>Requirement Change</fullName>
            </value>
            <value>
                <fullName>Training Issue</fullName>
            </value>
            <value>
                <fullName>User Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>