force-app/main/default/objects/CM_Bug__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Change to "Fixed" after the bug has been resolved and reassign to the QA Lead.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <color>#FF0000</color>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
                <color>#78C953</color>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Re-Opened</fullName>
                <color>#E27001</color>
                <label>Re-Opened</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#33CC00</color>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
                <color>#F3D904</color>
                <label>Under Review</label>
            </value>
            <value>
                <fullName>Deferred</fullName>
                <color>#A53711</color>
                <label>Deferred</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <color>#66E9BD</color>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>