force-app/main/default/objects/CM_Bug__c/fields/Target_Fix_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Fix_Date__c</fullName>
    <label>Target Fix Date</label>
    <type>Date</type>
</CustomField>