force-app/main/default/objects/CM_Bug__c/validationRules/Require_Rejected_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Rejected_Reason</fullName>
    <active>true</active>
    <description>Require Rejected Reason when Status changes to Rejected</description>
    <errorConditionFormula>AND(
   ISPICKVAL(Status__c, "Rejected"),
   ISPICKVAL(Reason_for_Rejection__c, "")
)</errorConditionFormula>
    <errorDisplayField>Reason_for_Rejection__c</errorDisplayField>
    <errorMessage>Reason for Rejection is required when status is Rejected</errorMessage>
</ValidationRule>