force-app/main/default/objects/CM_Bug__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>BackLog_Number__c</columns>
    <columns>Backlog_Item__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Description__c</columns>
    <columns>QC_URL__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>