force-app/main/default/objects/CM_Bug__c/listViews/Daves_Bugs_June.listView-meta.xml
<ListView>
    <fullName>Daves_Bugs_June</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Backlog_Item__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>[SFDC] June 2012</value>
    </filters>
    <label>All Open Bugs June</label>
</ListView>