force-app/main/default/objects/CM_Bug__c/listViews/Membership_Project_Bugs.listView-meta.xml
<ListView>
    <fullName>Membership_Project_Bugs</fullName>
    <columns>NAME</columns>
    <columns>BackLog_Number__c</columns>
    <columns>Sprint__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Business_Priority__c</columns>
    <columns>Priority__c</columns>
    <columns>Description__c</columns>
    <columns>Backlog_Item__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Fixed,Closed,Deferred,Rejected</value>
    </filters>
    <filters>
        <field>Sprint__c</field>
        <operation>contains</operation>
        <value>Membership</value>
    </filters>
    <label>Membership Project Bugs</label>
</ListView>