force-app/main/default/objects/CM_Bug__c/listViews/Open_Bugs.listView-meta.xml
<ListView>
    <fullName>Open_Bugs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Backlog_Item__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,Under Review</value>
    </filters>
    <label>Open Bugs</label>
</ListView>